--- a/style.css
+++ b/style.css
@@ -24,12 +24,15 @@ p{
 	margin-left: 0.2rem;
 }
 
+a{
+	color: white;"
+}
 a:hover{
-	color: var(--colorDominante);
+	color: var(--colorPrincipal);
 	transition: color ease .1s;
 }
 a:visited{
-	color: var(--colorDominante);
+	color: var(--colorPrincipal);
 	transition: color ease .1s;
 }
 
